== In Git

=== Bugfixes
* Hooks not being cleared per scenario (#54 Aslak Hellesøy, Darrin Holst)

== 0.2.1 2009-12-21

Cuke4Duke gets an executable!

Many people have asked for a command line for Cuke4Duke, similar to the familiar cucumber command line.
Wait no longer! See http://wiki.github.com/aslakhellesoy/cuke4duke/command-line for details.

=== New Features
* Gem with command line (#40 Aslak Hellesøy)

=== Changed Features
* All usage (Ant, Maven, Command Line) now requires the cuke4duke gem to be installed instead of the cucumber gem. (Aslak Hellesøy)

== 0.2.0 2009-12-21

This release (plus the recent Cucumber 0.5.1 release) fixes several bugs related to UTF-8 and Windows,
and there is new and improved support for Ant. As usual there are several bug fixes and new features.

=== IMPORTANT INFORMATION FOR MAVEN USERS

In previous releases you would install gems with e.g. <gem>cuke4duke --version 0.2.1</gem>
In other words, RubyGems' "install" command was implicit. Starting with this release you have to be explicit, so to install
a gem you need to do: <gem>install cuke4duke --version 0.2.1</gem>. This allows you to more easily uninstall or execute
other gem commands from Maven.

=== Bugfixes
* Step definition snippets for Java look crazy. (#49 Aslak Hellesøy)
* Java snippets for multiline strings incorrectly suggest table. (#51 Aslak Hellesøy)
* Improved UTF-8. Make sure you compile your stepdefs with -encoding UTF-8 and save feature files in UTF-8 (Aslak Hellesøy)

=== New Features
* New Ant tasks for gem and cucumber.
* New cuke4duke.methodFormat system property for better reporting. See http://wiki.github.com/aslakhellesoy/cuke4duke/method-format (#48 Aslak Hellesøy)
* Upgrade examples to Groovy 1.6.7, which removes the need for dirty hacks to get tagged hooks working. (Aslak Hellesøy)
* Upgrade examples to Ant 1.7.1. (Aslak Hellesøy)
* Cuke4Duke no longer depends on an exact version of cucumber, but rather >= (equal or greater) (Mike Gaffney)